# app/controllers/reservation_controller.py
@@ -4,23 +4,23 @@ from functools import wraps
 from app.models.reservation_model import Reservation
 from app.views.reservation_view import render_reservations_list, render_reservation_detail
 from app.utils.decorators import jwt_required, role_required
+from datetime import datetime
 
 reservation_bp = Blueprint("reservation", __name__)
 
 @reservation_bp.route("/reservations", methods=["GET"])
 @jwt_required
 def get_reservations():
-    reservations = reservation.get_all()
+    reservations = Reservation.get_all()
     return jsonify(render_reservations_list(reservations))
 
 @reservation_bp.route("/reservations/<int:id>", methods=["GET"])
 @jwt_required
 def get_reservation(id):
-    reservation = reservation.get_by_id(id)
+    reservation = Reservation.get_by_id(id)
     if reservation:
         return jsonify(render_reservation_detail(reservation))
-    return jsonify({"error": "reservation no encontrado"}), 404
-
+    return jsonify({"error": "Reserva no encontrada"}), 404
 
 @reservation_bp.route("/reservations", methods=["POST"])
 @jwt_required
@@ -34,21 +34,21 @@ def post_reservation():
     special_requests = data.get("special_requests")
     status = data.get("status")
 
-    if not user_id or not restaurant_id or not reservation_date or not num_guests or not special_requests or not status:
+    if not user_id or not restaurant_id or not reservation_date or not num_guests or not status:
         return jsonify({"error": "Faltan datos requeridos"}), 400
-
-    reservation = reservation(user_id=user_id, restaurant_id=restaurant_id, reservation_date=reservation_date, num_guests=num_guests, special_requests=special_requests, status=status)
-    reservation.save()
-    return jsonify(render_reservation_detail(reservation)), 201
+    
+    new_reservation = Reservation(user_id=user_id, restaurant_id=restaurant_id, reservation_date=reservation_date, num_guests=num_guests, special_requests=special_requests, status=status)
+    new_reservation.save()
+    return jsonify(render_reservation_detail(new_reservation)), 201
 
 @reservation_bp.route("/reservations/<int:id>", methods=["PUT"])
 @jwt_required
-@role_required(role=["admin"])
+@role_required(role=["admin", "customer"])
 def update_reservation(id):
-    reservations = reservation.get_by_id(id)
+    reservations = Reservation.get_by_id(id)
 
     if not reservations:
-        return jsonify({"error": "reservation no encontrado"}), 404
+        return jsonify({"error": "Reserva no encontrada"}), 404
 
     data = request.json
     
@@ -70,11 +70,10 @@ def update_reservation(id):
 
 @reservation_bp.route("/reservations/<int:id>", methods=["DELETE"])
 @jwt_required
-@role_required(role=["admin"])
+@role_required(role=["admin", "customer"])
 def delete_reservation(id):
-    reservations = reservation.get_by_id(id)
-    if not reservations:
-        return jsonify({"error": "reservation no encontrado"}), 404
-
-    reservations.delete()
-    return "", 204
+    reservation = Reservation.query.get(id)
+    if reservation is None:
+        return jsonify({"error": "Reserva no encontrada"}), 404
+    reservation.delete()
+    return jsonify({"message": "Reserva eliminada correctamente"}), 200
